# personal_ai_trainer

./: .gitignore  app.py  pyproject.toml
.streamlit/: secrets.toml.example
src/: __init__.py
src/agents/: __init__.py
src/graph/: __init__.py
src/memory/: __init__.py  gdrive_memory.py
src/models/: user_profile.py  workout_log.py  workout_plan.py
src/utils/: anthropic_langchain_client.py  gemini_client.py  gemini_langchain_client.py  google_auth.py  prompts.py  secure_storage.py  storage_helpers.py  tool_handlers.py
